--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-winapi = { version = "0.3", features = ["ioapiset","winioctl","winuser", "fileapi", "winnt", "handleapi", "errhandlingapi", "securitybaseapi", "processthreadsapi", "winbase"] }
+winapi = { version = "0.3", features = ["timezoneapi","ioapiset","winioctl","winuser", "fileapi", "winnt", "handleapi", "errhandlingapi", "securitybaseapi", "processthreadsapi", "winbase"] }
+chrono = "0.4"
