--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,4 @@ edition = "2018"
 
 [dependencies]
 winapi = { version = "0.3", features = ["winerror","timezoneapi","ioapiset","winioctl","winuser", "fileapi", "winnt", "handleapi", "errhandlingapi", "securitybaseapi", "processthreadsapi", "winbase"] }
-chrono = "0.4"
+chrono = { version = "0.4", default-features = false, features = ["alloc","std"]}
